remove GPL headers